[tool.poetry]
name = "langchain-progress"
version = "0.1.0"
description = "Wrapper for nicely displaying progress bars for langchain embedding components when using multiprocessing or ray."
authors = ["William Thorne <wthorne1@sheffield.ac.uk>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/wrmthorne/langchain-progress"
keywords = ["Langchain", "progress", "ray", "wrapper", "langchain_community", "multiprocessing", "tqdm"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[tool.poetry.dependencies]
python = "^3.9"
langchain-community = "<=0.0.28"

[tool.poetry.group.ray.dependencies]
ray = {extras = ["tune"], version = ">=2.4.0"}

[tool.poetry.group.tqdm.dependencies]
tqdm = "<=4.66.2"

[tool.poetry.group.dev.dependencies]
ray = {extras = ["tune"], version = ">=2.4.0"}
tqdm = "<=4.66.2"

[tool.poetry.group.test.dependencies]
ray = {extras = ["tune"], version = ">=2.4.0"}
tqdm = "<=4.66.2"
responses = "<=0.25.0"
sentence-transformers = "<=2.2.2"
InstructorEmbedding = "<=1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
